feat(WebSocket): 添加事件过滤和连接追踪 — 按主题广播、WebSocketConnectionTracker、队列代理支持